support for MatrixDatabase queries

--- a/assets/makefile
+++ b/assets/makefile
@@ -1,6 +1,9 @@
 SHELL:=/bin/bash
 
-all: RecommenderDatabase_assets
+all:
+
+MatrixDatabase_assets:
+	rsync -avzh --stats --progress areynolds@tools0.altiusinstitute.org:/home/ntripician/slurm/MatrixDatabase ${PWD}
 
 RecommenderDatabase_assets:
 	rsync -avzh --stats --progress areynolds@tools0.altiusinstitute.org:/home/ntripician/slurm/RecommenderDatabase ${PWD}
